--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p>Hi, My name is Simo. 
             I'm a Front-End web developer based in Finland.
             I mainly focus on HTML and CSS with a little spice of JavaScript
-            although I'm not afraid to venture in to different avenues of creativeness.
+            although I'm not afraid to venture in to different avenues of creativity.
 
         </p>
     </div>
