--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             padding: 0px;
             height: 100%;
             scroll-behavior: smooth;
+            background-color: rgb(27, 82, 234);
         }
 
         body{
