--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             margin: 0px;
             padding: 0px;
             height: 100%;
+            background-color: rgb(27, 82, 234);
+
 
             
         }
